# JobSearch

./: README.md  config.py  main.py  pyproject.toml
data/: hh_vacancies.json  test_hh_vacancies.json  test_select_vacancies.json
src/: api_request_handler.py  base_vacancy.py  db_manager.py  file_handler.py  hh_api_request_handler.py  hh_api_request_hendler.py  hh_reader_vacancies.py  json_file_handler.py  reader_vacancies.py  utils.py  vacancies_handler.py  vacancy.py
tests/: confitest.py  conftest.py  test_db_manager.py  test_hh_api_request_handler.py  test_hh_reader_vacancies.py  test_json_file_handler.py  test_utils.py  test_vacancy.py  test_vacancy_handler.py
